--- a/package.json
+++ b/package.json
@@ -31,14 +31,15 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "~6.1.1",
-    "@angular/compiler": "~6.1.1",
-    "@angular/compiler-cli": "~6.1.1",
-    "@angular/language-service": "~6.1.1",
     "@angular-devkit/architect": "~0.7.2",
     "@angular-devkit/build-angular": "~0.7.2",
     "@angular-devkit/core": "~0.7.2",
     "@angular-devkit/schematics": "~0.7.2",
+    "@angular/cli": "6.1.3",
+    "@angular/compiler": "~6.1.1",
+    "@angular/compiler-cli": "~6.1.1",
+    "@angular/language-service": "~6.1.1",
+    "@ionic/storage": "^2.1.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~10.5.2",
